tests/ui/infinite/infinite-type-alias-mutual-recursion.feature_new.stderr
error[E0275]: overflow evaluating the requirement `X2 == _`
  --> $DIR/infinite-type-alias-mutual-recursion.rs:12:1
   |
LL | type X1 = X2;
   | ^^^^^^^

error[E0275]: overflow evaluating the requirement `X3 == _`
  --> $DIR/infinite-type-alias-mutual-recursion.rs:16:1
   |
LL | type X2 = X3;
   | ^^^^^^^

error[E0275]: overflow evaluating the requirement `X1 == _`
  --> $DIR/infinite-type-alias-mutual-recursion.rs:19:1
   |
LL | type X3 = X1;
   | ^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0275`.
